# autosar-e2e

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yml  wheels.yml
doc/: api.rst  conf.py  doc-requirements.txt  index.rst
src/e2e/: __init__.py  crc.c  crc.h  crc.pyi  crclib.c  crclib.h  p01.c  p01.pyi  p02.c  p02.pyi  p04.c  p04.pyi  p05.c  p05.pyi  p06.c  p06.pyi  p07.c  p07.pyi  util.c  util.h
test/: test_crc.py  test_p01.py  test_p02.py  test_p04.py  test_p05.py  test_p06.py  test_p07.py
