[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "autosar-e2e"
description = 'Python implementation of the AUTOSAR E2E Protocol'
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = [
  "AUTOSAR",
  "E2E",
  "automotive",
]
authors = [
  { name = "Artur Drogunow", email = "artur.drogunow@zf.com" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://autosar-e2e.readthedocs.io/en/latest"
Issues = "https://github.com/zariiii9003/autosar-e2e/issues"
Source = "https://github.com/zariiii9003/autosar-e2e"
Homepage = "https://github.com/zariiii9003/autosar-e2e"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/e2e/_version.py"]
wheel.exclude = ["**.c", "**.h"]
wheel.packages = ["src/e2e"]
wheel.py-api = "cp311"

[tool.setuptools_scm]  # Section required
write_to = "src/e2e/_version.py"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/test"
build-frontend = "build"
skip = "pp*"
